// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders as a button if no href is provided 1`] = `
<div>
  <button
    class=""
    type="button"
  >
    This is a link
  </button>
</div>
`;

exports[`Link renders as an anchor when href is provided 1`] = `
<div>
  <a
    class=""
    href="https://www.bing.com"
    tabindex="0"
  >
    This is a link
  </a>
</div>
`;
